--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
         <link rel="stylesheet" type="text/css" href="./styles.css">
     </head>
     <body>
+        <script>
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+            ga('create', 'UA-66065000-1', 'auto');
+            ga('send', 'pageview');
+        </script>
         <div class="stats">
             <b>Level:</b> <span id="level"></span><br>
             <b>Score:</b> <span id="score"></span><br>
