--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                 <a id="start_over">Start Over</a>
             </div>
         </div>
+        <div class="credits">
+            <b>By: </b> <a href="http://saiichihashimoto.com" target="_blank">Saiichi Hashimoto</a>
+        </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
         <script src="./scripts.js"></script>
     </body>
