Give max levels

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             ga('create', 'UA-66065000-1', 'auto');
         </script>
         <div class="stats">
-            <b>Level:</b> <span id="level"></span><br>
+            <b>Level:</b> <span id="level"></span>/19<br>
             <b>Score:</b> <span id="score"></span><br>
         </div>
         <div id="time_remaining"></div>
