--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <div class="stats">
             <b>Level:</b> <span id="level"></span>/19<br>
             <b>Score:</b> <span id="score"></span><br>
+            <font color="red">DOES NOT WORK ON MOBILE</font>
         </div>
         <div id="time_remaining"></div>
         <div class="maze-container">
