--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="overlay-container">
             <div id="lost_overlay" class="overlay">
                 <span id="reason"></span>
-                <a id="start_over">Start Over</a>
+                <a id="start_over">Try this level again!</a>
             </div>
         </div>
         <div class="credits">
