Reverse stage and notices and stuff

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             ga('create', 'UA-66065000-1', 'auto');
         </script>
         <div class="stats">
-            <b>Level:</b> <span id="level"></span>/19<br>
+            <b>Level:</b> <span id="level"></span>/<span id="last_level"></span><br>
             <b>Score:</b> <span id="score"></span><br>
-            <font color="red">DOES NOT WORK ON MOBILE</font>
+            <span class="notice">DOES NOT WORK ON MOBILE</span>
         </div>
         <div id="time_remaining"></div>
         <div class="maze-container">
