--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <b>Score:</b> <span id="score"></span><br>
             <span class="notice">DOES NOT WORK ON MOBILE</span>
         </div>
-        <div id="time_remaining"></div>
+        <div id="time_remaining" class="time_remaining"></div>
         <div class="maze-container">
             <div id="maze" class="maze"></div>
         </div>
