--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             </div>
         </div>
         <div class="credits">
+            <b><a href="https://github.com/saiichihashimoto/mymazes" target="_blank">Github</a><br>
             <b>By: </b> <a href="http://saiichihashimoto.com" target="_blank">Saiichi Hashimoto</a>
         </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
